--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.*",
     "@ng-icons/heroicons": "^27.*",
     "@ng-icons/ionicons": "^27.*",
