--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/service-worker": "^17.3.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.*",
     "@ng-icons/heroicons": "^27.*",
