--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:container": "docker build -t floppybot/admin-console .",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
