--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:container": "docker build -t floppybot/admin-console .",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "private": true,
