--- a/angular.json
+++ b/angular.json
@@ -113,7 +113,8 @@
                 "replace": "src/environments/environment.ts",
                 "with": "src/environments/environment.testing.ts"
               }
-            ]
+            ],
+            "karmaConfig": "karma.conf.js"
           }
         },
         "lint": {
