--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,12 @@ on:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
+        pnpm-version: [9.x]
+        chrome-version: [latest]
+
     steps:
       # Setup Environment
       - name: Set up QEMU
@@ -17,9 +23,48 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Setup Node.js and pnpm
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: ${{ matrix.pnpm-version }}
+          run_install: false
+
+      # Setup Chrome
+      - name: Setup Chrome for testing
+        uses: browser-actions/setup-chrome@v1
+        id: setup-chrome
+        with:
+          chrome-version: ${{ matrix.chrome-version }}
+
+      # Cache pnpm store
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       # Checkout Code
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      # Install dependencies
+      - name: Fetch dependencies
+        run: pnpm fetch && pnpm install --offline
+
+      # Build & Test
+      - name: Build
+        run: npm run build
 
       # Build Image
       - name: Docker meta
