--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -35,3 +35,10 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      actions:
+        patterns:
+          - "actions/*"
+      docker:
+        patterns:
+          - "docker/*"
