--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -56,6 +56,8 @@ jobs:
       # Build & Test
       - name: Build
         run: npm run build
+      - name: Linting
+        run: npm run lint
       - name: Test
         run: npm run test:ci
         env:
