can now get a link for a stream source

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ FLPY_AUTH_DOMAIN=floppypanda-dev.eu.auth0.com
 FLPY_AUTH_CLIENT_ID=0K1HDg7wVjHo9l0d17BmxK9zTCui3NJ6
 FLPY_AUTH_AUDIENCE=https://bot.floppypanda.test
 FLPY_AUTH_REDIRECT_URI=http://localhost:4200/callback
+FLPY_STREAM_SOURCE_BASE_URL=http://localhost:4201
 FLPY_DEBUG=true
