--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -88,7 +88,7 @@ jobs:
           - stable
           - beta
           - dev
-          - canary
+          #- canary
     steps:
       # Checkout the repository
       - uses: actions/checkout@v4
