--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -94,30 +94,22 @@ jobs:
       - uses: actions/checkout@v4
 
       # Setup Node.js and pnpm
-      - name: Node ${{ matrix.node-version }}
+      - name: Setup Node V${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: pnpm
+      - name: Setup pnpm V${{ matrix.pnpm-version }}
         uses: pnpm/action-setup@v3
         with:
           version: ${{ matrix.pnpm-version }}
           run_install: false
 
       # Setup Chrome
-      - name: Setup Chrome for testing
+      - name: Setup Chrome V${{ matrix.chrome-version }}
         uses: browser-actions/setup-chrome@v1
         id: setup-chrome
         with:
           chrome-version: ${{ matrix.chrome-version }}
-
-      # Setup CodeQL
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: typescript
-          build-mode: none
-          source-root: src/
 
       # Cache pnpm store
       - name: Get pnpm store directory
@@ -128,9 +120,9 @@ jobs:
         name: Setup pnpm cache
         with:
           path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-pnpm-store-${{ matrix.node-version }}-${{ matrix.pnpm-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+            ${{ runner.os }}-pnpm-store-${{ matrix.node-version }}-${{ matrix.pnpm-version }}-
 
       # Install dependencies
       - name: Fetch dependencies
@@ -139,8 +131,6 @@ jobs:
       # Build & Test
       - name: Build
         run: npm run build
-      - name: Linting
-        run: npm run lint
       - name: Test
         run: npm run test:ci
         env:
