--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,12 +10,6 @@ on:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
-        pnpm-version: [9.x]
-        chrome-version: [latest]
-
     steps:
       # Setup Environment
       - name: Set up QEMU
@@ -24,14 +18,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # Setup Node.js and pnpm
-      - name: Node ${{ matrix.node-version }}
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: pnpm
+          node-version-file: '.nvmrc'
+      - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ matrix.pnpm-version }}
+          version: 9.x
           run_install: false
 
       # Cache pnpm store
