--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
+    name: Build and Publish Docker Image
     steps:
       # Setup Environment
       - name: Set up QEMU
@@ -18,6 +19,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # Setup Node.js and pnpm
+      - run: |
+          ls -la
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
