added way to configure login mode

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 FLPY_API_HOST=http://localhost:5266
 FLPY_AUTH_DOMAIN=floppypanda-dev.eu.auth0.com
-FLPY_AUTH_CLIENT_ID=0K1HDg7wVjHo9l0d17BmxK9zTCui3NJ6
-FLPY_AUTH_AUDIENCE=https://bot.floppypanda.test
+FLPY_AUTH_CLIENT_ID=J3u7VK8ZSid1z2JRsfO8wDH1k9SdC9RZ
+FLPY_AUTH_AUDIENCE=https://test.bot.floppypanda.ch/
 FLPY_AUTH_REDIRECT_URI=http://localhost:4200/callback
+FLPY_LOGIN_MODE=popup
 FLPY_STREAM_SOURCE_BASE_URL=http://localhost:4201
 FLPY_DEBUG=true
