--- a/package.json
+++ b/package.json
@@ -63,5 +63,13 @@
     "prettier": "^3.5.1",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract"
+    ]
   }
 }
