--- a/package.json
+++ b/package.json
@@ -18,39 +18,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.4",
-    "@angular/cdk": "19.2.7",
-    "@angular/common": "^19.2.4",
-    "@angular/compiler": "^19.2.4",
-    "@angular/core": "^19.2.4",
-    "@angular/forms": "^19.2.4",
-    "@angular/material": "19.2.7",
-    "@angular/platform-browser": "^19.2.4",
-    "@angular/platform-browser-dynamic": "^19.2.4",
-    "@angular/router": "^19.2.4",
-    "@angular/service-worker": "^19.2.4",
+    "@angular/animations": "^19.2.5",
+    "@angular/cdk": "19.2.8",
+    "@angular/common": "^19.2.5",
+    "@angular/compiler": "^19.2.5",
+    "@angular/core": "^19.2.5",
+    "@angular/forms": "^19.2.5",
+    "@angular/material": "19.2.8",
+    "@angular/platform-browser": "^19.2.5",
+    "@angular/platform-browser-dynamic": "^19.2.5",
+    "@angular/router": "^19.2.5",
+    "@angular/service-worker": "^19.2.5",
     "@auth0/auth0-angular": "^2.2.3",
     "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.*",
-    "rxjs": "~7.8.2",
+    "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.5",
+    "@angular-devkit/build-angular": "^19.2.6",
     "@angular-eslint/builder": "19.3.0",
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/schematics": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
-    "@angular/cli": "^19.2.5",
-    "@angular/compiler-cli": "^19.2.4",
-    "@types/jasmine": "~5.1.7",
+    "@angular/cli": "^19.2.6",
+    "@angular/compiler-cli": "^19.2.5",
+    "@types/jasmine": "~5.1.6",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "git-describe": "^4.1.1",
     "jasmine-core": "~5.6.0",
@@ -60,8 +60,16 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "npm-run-all2": "^6.2.6",
-    "prettier": "^3.5.3",
+    "prettier": "^3.5.1",
     "prettier-eslint": "^16.3.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.5.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract"
+    ]
   }
 }
