--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular-eslint/template-parser": "19.3.0",
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.8",
+    "@playwright/test": "^1.52.0",
     "@types/jasmine": "~5.1.7",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
