--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - feature/playwright
 
 jobs:
   build:
@@ -21,7 +24,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9.x
+          version: 10.x
           run_install: false
 
       # Setup CodeQL
@@ -124,3 +127,61 @@ jobs:
         run: npm run test:ci
         env:
           CHROME_BIN: ${{ steps.setup-chrome.outputs.chrome-path }}
+
+  playwright:
+    name: E2E-Test Application
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          # current LTS
+          - 22.x
+        pnpm-version:
+          # latest stable
+          - 10.x
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@v4
+
+      # Setup Node.js and pnpm
+      - name: Setup Node V${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Setup pnpm V${{ matrix.pnpm-version }}
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ matrix.pnpm-version }}
+          run_install: false
+
+      # Cache pnpm store
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ matrix.node-version }}-${{ matrix.pnpm-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-${{ matrix.node-version }}-${{ matrix.pnpm-version }}-
+
+      # Install dependencies
+      - name: Fetch dependencies
+        run: pnpm fetch && pnpm install --offline
+      - name: Install Playwright Browsers
+        run: pnpm playwright install --with-deps
+
+      # Run Tests
+      - name: Test
+        run: npx playwright test --only-changed=$GITHUB_BASE_REF
+        env:
+          CI: 'true'
+          FLOPPYBOT_CREDENTIALS: ${{ secrets.PLAYWRIGHT_USER }}
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: .playwright/html/
+          retention-days: 30
