--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,7 +8,16 @@ updates:
   - package-ecosystem: "npm"
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    assignees:
+      - "rgunti"
+    reviewers:
+      - "rgunti"
+    labels:
+      - "dependencies"
+      - "pnpm"
+    commit-message:
+      prefix: "deps(pnpm)"
     ignore:
       # Ignore all major updates
       - dependency-name: "*"
@@ -29,7 +38,16 @@ updates:
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    assignees:
+      - "rgunti"
+    reviewers:
+      - "rgunti"
+    labels:
+      - "dependencies"
+      - "docker"
+    commit-message:
+      prefix: "deps(docker)"
     ignore:
       # Ignore all major updates
       - dependency-name: "*"
@@ -39,6 +57,15 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees:
+      - "rgunti"
+    reviewers:
+      - "rgunti"
+    labels:
+      - "dependencies"
+      - "gh-actions"
+    commit-message:
+      prefix: "deps(gh-actions)"
     groups:
       actions:
         patterns:
