--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@angular-eslint/template-parser": "19.8.0",
     "@angular/cli": "^19.2.14",
     "@angular/compiler-cli": "^19.2.14",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
     "@playwright/test": "^1.52.0",
     "@types/jasmine": "~5.1.7",
     "@types/node": "^22.15.30",
