--- a/package.json
+++ b/package.json
@@ -46,13 +46,16 @@
     "@angular-eslint/template-parser": "19.8.0",
     "@angular/cli": "^19.2.14",
     "@angular/compiler-cli": "^19.2.14",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
     "@playwright/test": "^1.52.0",
     "@types/jasmine": "~5.1.7",
     "@types/node": "^22.15.30",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "@typescript-eslint/utils": "^8.34.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "git-describe": "^4.1.1",
@@ -62,9 +65,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "npm-run-all2": "^6.2.6",
+    "npm-run-all2": "^8.0.4",
     "prettier": "^3.5.3",
-    "prettier-eslint": "^16.4.1",
+    "prettier-eslint": "^16.4.2",
     "typescript": "~5.8.3"
   },
   "pnpm": {
