--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -10,7 +10,7 @@ jobs:
     name: E2E-Test Application
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.53.0-noble
+      image: mcr.microsoft.com/playwright:v1.56.1-noble
       options: --user 1001
     strategy:
       matrix:
@@ -56,7 +56,7 @@ jobs:
       - name: Test
         run: npx playwright test
         env:
-          CI: 'true'
+          CI: "true"
           FLOPPYBOT_CREDENTIALS: ${{ secrets.PLAYWRIGHT_USER }}
       - uses: actions/upload-artifact@v5
         if: ${{ !cancelled() }}
