--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@angular/router": "^21.0.5",
     "@angular/service-worker": "^21.0.5",
     "@auth0/auth0-angular": "^2.3.0",
+    "@fontsource-variable/kode-mono": "^5.2.8",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/poppins": "^5.2.7",
     "@ng-icons/bootstrap-icons": "^33.0.0",
     "@ng-icons/core": "^33.0.0",
     "rxjs": "~7.8.2",
